--- a/myWeb/src/index.html
+++ b/myWeb/src/index.html
@@ -3,6 +3,10 @@
 <head>
   <meta charset="utf-8">
   <title>Jorge Durán Corbalán</title>
+  <meta name="description" content="Mi nombre es Jorge Durán Corbalán. Soy diseñador gráfico y desarrollador web. Aquí podrás encontrar mi Portfolio. | Jorgedcorbalan"/>
+  <meta name="keywords" content="Jorge Durán Corbalán, jorgedcorbalan, Diseño gráfico, Desarrollo web, Portfolio, Murcia, jorgelillo, jorgelillo9"/>
+  <meta name="author" content="Jorge Durán Corbalán" />
+
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
